=== ongoing ===


=== 0.2 ===

- using the MultilingualPublishMixin from django-libs
- using the MultilingualPublishMixin from django-libs

=== 0.1.1 ===
- added admin and unicode method for Organization model
- fixed copy paste mistake

=== 0.1 ===

- added models and cms plugin

Initial commit