@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Added OrganizationPersonRole and inline admin
 
 === 0.2 ===
 
